Fix gap in countries count

--- a/src/app/journey/countries-count/countries-count.component.scss
+++ b/src/app/journey/countries-count/countries-count.component.scss
@@ -1,7 +1,7 @@
 :host {
   display: flex;
   justify-content: center;
-  gap: 4rem;
+  gap: 64px;
   padding: 2rem;
   width: 100%;
   background-color: #9fc088;
@@ -42,7 +42,7 @@
 @media (min-width: 641px) and (max-width: 1280px) {
   :host {
     flex-direction: column;
-    gap: 2rem;
+    gap: 48px;
     padding: 1.5rem;
   }
 
@@ -65,7 +65,7 @@
 @media (max-width: 640px) {
   :host {
     flex-direction: column;
-    gap: 1rem;
+    gap: 32px;
     padding: 1rem;
   }
 
